完善了GET和POST请求；完善了GET请求返回对象，自动转JSON格式；

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
     <servlet>
         <servlet-name>MySpringMVC</servlet-name>
-        <servlet-class>servlet.MySpringMVCServlet</servlet-class>
+        <servlet-class>mymvc.servlet.MySpringMVCServlet</servlet-class>
         <init-param>
             <param-name>Configuration</param-name>
             <param-value>application.properties</param-value>
